tests/unit/default/syntax-error/073-create-table-dot-name.x.t
---- IN ----
+%table.name|
---- OUT ----
---- ERR ----
syntax: expected <alter-column-type> after `...table.name` near `|` at position 12 - at line 1
---- EXIT ----
1
